--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-https://github.com/Ana96stasiia/FE/blob/71e7a429e128b6cdd493739f18d0355d7b544cf6/login.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  <link href="https://github.com/Ana96stasiia/FE/blob/3bced7859505a93da2c8f92bd4665c22f01e908f/login.html">
+</head>
+<body>
+    
+</body>
+</html>
