--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>https://github.com/Ana96stasiia/FE/blob/bdb6ac68720cbc0701ce316f4ae61a1674640182/login.html</title>
      <a href="https://github.com/Ana96stasiia/FE/blob/bdb6ac68720cbc0701ce316f4ae61a1674640182/login.html"></a>
 </head>
 <body>
